# Conduction

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ja.md  conduction-requirements.md  install.md  rustfmt.toml  usage.md
crates/conduction-analysis/: Cargo.toml
crates/conduction-analysis/src/: bpm.rs  decode.rs  error.rs  key.rs  lib.rs  waveform.rs
crates/conduction-app/: Cargo.toml  tauri.conf.json
crates/conduction-app/capabilities/: default.json
crates/conduction-app/src/: audio_engine.rs  commands.rs  export_state.rs  http_api.rs  lib.rs  library_state.rs  main.rs  setlist_state.rs  settings.rs  system_stats.rs  youtube.rs
crates/conduction-audio/: Cargo.toml
crates/conduction-audio/src/: deck.rs  device.rs  error.rs  lib.rs  mixer.rs  player.rs
crates/conduction-audio/src/dsp/: coefficients.rs  echo.rs  mod.rs  params.rs  reverb.rs  source.rs  timestretch.rs
crates/conduction-claude/: Cargo.toml
crates/conduction-claude/src/: lib.rs
crates/conduction-conductor/: Cargo.toml
crates/conduction-conductor/src/: automation.rs  lib.rs  matching.rs  runner.rs  template.rs
crates/conduction-core/: Cargo.toml
crates/conduction-core/src/: beat.rs  cue.rs  error.rs  ids.rs  key.rs  lib.rs  setlist.rs  time.rs  track.rs
crates/conduction-download/: Cargo.toml
crates/conduction-download/src/: lib.rs
crates/conduction-export/: Cargo.toml
crates/conduction-export/src/: api.rs  format.rs  lib.rs  registry.rs
crates/conduction-library/: Cargo.toml
crates/conduction-library/src/: error.rs  import.rs  lib.rs  library.rs  mapping.rs  schema.rs  setlist_repo.rs  user_template_repo.rs
crates/conduction-script/: Cargo.toml
crates/conduction-script/src/: lib.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/design-system/: DESIGN_SYSTEM.md  colors_and_type.css
ui/design-system/preview/: _card.css  brand-icons.html  brand-logo.html  colors-accent.html  colors-deck.html  colors-neutrals.html  colors-status.html  components-badges.html  components-buttons.html  components-cards.html  components-inputs.html  components-knobs.html  components-mix-suggestion.html  components-tabs.html  components-tracklist.html  components-transport.html  components-waveform.html  kit.css  spacing-radii.html  spacing-scale.html  spacing-shadows.html  type-body.html  type-display.html  type-mono.html  ui-kit.html
ui/src/: App.css  App.tsx  monaco-shims.d.ts
ui/src/components/beatgrid/__mockup__/: BeatgridCorrection.jsx
ui/src/components/cues/: CueEditor.jsx  CueListItem.jsx  CuePad.tsx
ui/src/components/deck/: DeckView.jsx
ui/src/components/fx/: FxPad.tsx
ui/src/components/hotcue/: HotCuePad.tsx
ui/src/components/keyconfig/: KeyConfigBar.tsx  KeyConfigModal.tsx
ui/src/components/layout/: App.jsx  Sidebar.jsx  TopBar.jsx
ui/src/components/loop/: LoopPad.tsx
ui/src/components/mixer/: Mixer.jsx
ui/src/components/override/: OverrideControls.jsx  OverrideControls.tsx  TransportStatusPanel.jsx  TransportStatusPanel.tsx
ui/src/components/override/__mockup__/: OverrideIndicator.jsx
ui/src/components/perf/: PerfHud.tsx
ui/src/components/setlist/: Setlist.jsx  SetlistOverview.tsx  SetlistTransitionBlock.jsx
ui/src/components/setlist/__mockup__/: SetlistOverview.jsx  SetlistTrackBlock.jsx
ui/src/components/settings/: Settings.jsx
ui/src/components/suggestion/: MixSuggestion.tsx
ui/src/components/suggestion/__mockup__/: MixSuggestion.jsx
ui/src/components/templates/: AutomationTimeline.jsx  AutomationTimeline.tsx  NodeEditor.jsx  NodeGraphEditor.tsx  ScriptDocs.tsx  ScriptEditor.tsx  TemplateEditor.jsx  TemplateLauncher.tsx  TemplateList.jsx  Templates.jsx  monacoSetup.ts
ui/src/components/templates/__mockup__/: ScriptEditor.jsx
ui/src/components/waveform/: WaveformView.tsx  WaveformZoomView.tsx
ui/src/hooks/: useAudioSettings.ts  useBeats.ts  useCues.ts  useHotCues.ts  useInterpolatedPosition.ts  useKeyBindings.ts  useMatchCandidates.ts  useMixerStatus.ts  useShortcuts.ts  useTracks.ts  useWaveform.ts
ui/src/lib/: beats.ts  ipc.ts  keybindings.ts  keys.ts
ui/src/screens/: LibraryScreen.tsx  SetlistScreen.tsx  SettingsScreen.tsx  TemplatesScreen.tsx  YouTubeScreen.tsx
ui/src/types/: beat.ts  hotcue.ts  mixer.ts  track.ts  waveform.ts
