[workspace]
resolver = "2"
members = [
    "crates/conduction-core",
    "crates/conduction-audio",
    "crates/conduction-analysis",
    "crates/conduction-conductor",
    "crates/conduction-library",
    "crates/conduction-claude",
    "crates/conduction-download",
    "crates/conduction-export",
    "crates/conduction-script",
    "crates/conduction-app",
]
exclude = ["rekordbox-serato-bridge"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
authors = ["Conduction Contributors"]
repository = "https://github.com/xxvw/conduction"

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"

# Concurrency
ringbuf = "0.4"
arc-swap = "1"
crossbeam = "0.8"
parking_lot = "0.12"

# Audio
cpal = "0.15"
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"] }
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.16"

# Analysis
aubio-rs = "0.2"
biquad = "0.5"
rustfft = "6"

# Persistence / config
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5"

# Scripting
mlua = { version = "0.10", features = ["lua54", "vendored"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Workspace-internal
conduction-core = { path = "crates/conduction-core" }
conduction-audio = { path = "crates/conduction-audio" }
conduction-analysis = { path = "crates/conduction-analysis" }
conduction-conductor = { path = "crates/conduction-conductor" }
conduction-library = { path = "crates/conduction-library" }
conduction-claude = { path = "crates/conduction-claude" }
conduction-download = { path = "crates/conduction-download" }
conduction-export = { path = "crates/conduction-export" }
conduction-script = { path = "crates/conduction-script" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.dev]
opt-level = 1

# 解析・デコード・DB は dev でも release レベルで最適化する。
# debug build では biquad の per-sample 処理が極端に遅いため、これを入れないと
# 波形生成が秒単位で遅延する。
[profile.dev.package.conduction-analysis]
opt-level = 3
[profile.dev.package.symphonia]
opt-level = 3
[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3
[profile.dev.package.symphonia-bundle-flac]
opt-level = 3
[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3
[profile.dev.package.symphonia-codec-aac]
opt-level = 3
[profile.dev.package.symphonia-format-isomp4]
opt-level = 3
[profile.dev.package.symphonia-format-ogg]
opt-level = 3
[profile.dev.package.biquad]
opt-level = 3
[profile.dev.package.rubato]
opt-level = 3
[profile.dev.package.rustfft]
opt-level = 3
[profile.dev.package.rusqlite]
opt-level = 3
