[package]
name = "conduction-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Track analysis (BPM, key, energy, structure, waveform) for Conduction."

[dependencies]
conduction-core.workspace = true
symphonia.workspace = true
biquad.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
# aubio-rs.workspace = true  # 有効化はフェーズ3b-5で
