[package]
name = "conduction-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tauri application entry point for Conduction."

[lib]
name = "conduction_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "conduction"
path = "src/main.rs"

[features]
default = ["claude-analysis"]
claude-analysis = ["conduction-claude/claude-analysis"]
yt-download = ["conduction-download/yt-download"]
# Tauri custom-protocol (production build only)
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
conduction-core.workspace = true
conduction-audio.workspace = true
conduction-analysis.workspace = true
conduction-conductor.workspace = true
conduction-library.workspace = true
uuid.workspace = true
conduction-claude.workspace = true
conduction-download.workspace = true
conduction-export.workspace = true
conduction-script.workspace = true

tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
sysinfo = "0.32"

axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories.workspace = true
parking_lot.workspace = true
crossbeam.workspace = true
arc-swap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
thiserror.workspace = true
