[package]
name = "conduction-download"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "yt-dlp integration for YouTube/SoundCloud download. Gated by yt-download feature."

[features]
default = []
yt-download = []

[dependencies]
conduction-core.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa = "5"
