[package]
name = "conduction-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Export Conduction's library to a rekordbox-compatible USB drive (CDJ Export Mode)."

[dependencies]
conduction-core.workspace = true
conduction-analysis.workspace = true
conduction-library.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa = "5"

# Phase 2 以降で実際の PDB / ANLZ writer を組む。Phase 1 では依存セットアップのみ。
rekordcrate = "0.3"
