[package]
name = "conduction-library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Library management and SQLite persistence for Conduction."

[dependencies]
conduction-core.workspace = true
rusqlite.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
