[package]
name = "conduction-script"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Script API (WebSocket / OSC + Lua) for Conduction."

[dependencies]
conduction-core.workspace = true
# mlua.workspace = true  # 有効化はフェーズ5で
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
