[package]
name = "conduction-script"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Script API (WebSocket / OSC + Lua) for Conduction."

[dependencies]
conduction-core.workspace = true
conduction-conductor.workspace = true
mlua.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
